--- a/access-control-component/login-form/index.html
+++ b/access-control-component/login-form/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./styles/w3.css">
     <script type="module" src="main.js"></script>
-    <title>Form Example</title>
+    <title>Login</title>
 </head>
 
 <body>
