--- a/login-form-token-based/system-index.html
+++ b/login-form-token-based/system-index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./styles/w3.css">
+    <script type="module" src="system-main.js"></script>
+    <title>System default view</title>
 </head>
 <body>
-    <h1>Hello!</h1>
 </body>
 </html>
